<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="st_Box_Info" Id="{b0ebc65b-39b4-4b63-892f-ada55674b9a4}">
    <Declaration><![CDATA[TYPE st_Box_Info :
STRUCT
	nPnIoBoxState    AT%I* : UINT;
    nPnIoBoxDiag     AT%I* : UINT;
    eBoxState              : E_BoxState;
	eBoxDiag               : E_BoxDiag;
	fbBoxInfo              : FB_BoxInfo;
	sBoxState              : STRING;
	sBoxDiag               : STRING;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>